--- a/static/style.css
+++ b/static/style.css
@@ -14,3 +14,14 @@ p {
   color: #555;
   font-size: 1.2rem;
 }
+a {
+  display: inline-block;
+  margin-top: 20px;
+  color: #2980b9;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+a:hover {
+  text-decoration: underline;
+}
