--- a/templates/health.html
+++ b/templates/health.html
@@ -27,6 +27,7 @@
         <th>BP</th>
         <th>Heart Rate</th>
         <th>Notes</th>
+        <th>Date</th>
       </tr>
       {% for entry in entries %}
       <tr>
@@ -34,6 +35,7 @@
         <td>{{ entry[3] }}</td>
         <td>{{ entry[4] }}</td>
         <td>{{ entry[5] }}</td>
+        <td>{{ entry[6] }}</td>
       </tr>
       {% endfor %}
     </table>
