--- a/templates/health.html
+++ b/templates/health.html
@@ -35,7 +35,7 @@
         <td>{{ entry[3] }}</td>
         <td>{{ entry[4] }}</td>
         <td>{{ entry[5] }}</td>
-        <td>{{ entry[6]|datetimeformat }}</td> <!-- Format date nicely -->
+        <td>{{ entry[6]|datetimeformat }}</td>
       </tr>
       {% endfor %}
     </table>
