--- a/templates/register.html
+++ b/templates/register.html
@@ -10,9 +10,15 @@
   <div class="container">
     <h1>Register</h1>
     <form method="POST" action="{{ url_for('register') }}">
-      <input type="text" name="username" placeholder="Username" required><br>
-      <input type="email" name="email" placeholder="Email" required><br>
-      <input type="password" name="password" placeholder="Password" required><br>
+      <label for="username">Username</label><br>
+      <input type="text" id="username" name="username" placeholder="Enter username" required><br><br>
+
+      <label for="email">Email</label><br>
+      <input type="email" id="email" name="email" placeholder="Enter email" required><br><br>
+
+      <label for="password">Password</label><br>
+      <input type="password" id="password" name="password" placeholder="Enter password" required><br><br>
+
       <button type="submit">Register</button>
     </form>
     <p>Already have an account? <a href="{{ url_for('login') }}">Login here</a></p>
